--- a/hatcher_source/static/css/job_detail.css
+++ b/hatcher_source/static/css/job_detail.css
@@ -25,3 +25,27 @@
     font-weight: 350;
     margin: 4px;
 }
+.description {
+    margin: 0;
+    font-size: 14px;
+    color: gray;
+}
+.apply_job_div{
+    height: 73px;
+    background: #ffff;
+    gap: 30%;
+    position: fixed;
+    width: 100%;
+    top: 58px;
+    box-shadow: 0px 3px 5px 0px #62606036;
+    z-index: 1000;
+}
+
+.apply_button[disabled = "true"] {
+    opacity: 0.6;
+    cursor: not-allowed !important;
+  }
+.apply_button{
+    width: 100px;
+}
+  
