--- a/hatcher_source/templates/blocks/dashboard_block.html
+++ b/hatcher_source/templates/blocks/dashboard_block.html
@@ -39,10 +39,10 @@
               <a class="nav-link active fs-5" href="{% url 'community_post:post_list' %}">Community</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active fs-5" href="#price-section">Pricing</a>
+              <a class="nav-link active fs-5" href="{%  url 'dashboard:profile' %}">Profile</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active fs-5" href="#contact-section">Contact</a>
+              <a class="nav-link active fs-5" href="{% url 'dashboard:applications' %}">Applications</a>
             </li>
             </li>
           </ul>
