--- a/hatcher_source/templates/credentials/employer_register.html
+++ b/hatcher_source/templates/credentials/employer_register.html
@@ -7,7 +7,7 @@
 <div class="main-container"">
 
   <form id="register-form" class="container text-center" method="post" enctype="multipart/form-data"
-  action="{% url 'employer_register' %}" >
+  action="{% url 'employer:employer_register' %}" >
   {% csrf_token %}
 
   <div class="d-flex flex-column align-items-center">
@@ -80,7 +80,7 @@
   <center>
     <button  type="submit" id="submit-btn" class="sub-btn ">Register</button>
     <br id="break">
-    <p>Already register ? <a href="{% url 'login'%}" class="login">Login</a></p>
+    <p>Already register ? <a href="{% url 'employer:employer_login'%}" class="login">Login</a></p>
   </center>
   </form>
 </div>
