--- a/hatcher_source/templates/partial/emp_home_partial.html
+++ b/hatcher_source/templates/partial/emp_home_partial.html
@@ -1,97 +1,63 @@
-{% extends '../blocks/dashboard_block.html' %}
-{% block title %}Community{% endblock title %}
-{% block css %}
-{% load static %}
-<link rel="stylesheet" href="{% static 'css/community_post.css' %}">
-{% endblock css %}
-
-{% block content %}
-
-<div class="container   mb-3" id="search-div">
-  <form action="{% url 'community_post:post_filter' %}" id="form" method="post" class="d-flex flex-row 
-  justify-content-evenly"
-    style="width: 90%;">
-     {% csrf_token %} 
-    <input type="text" placeholder="Search any ......" name="search_keyword" class="form-control"
-    style="width: 60%;"
-    required />
-    
-      <button type="submit" class="btn btn-success" style="
-      width:13%
-  ">Search</button>
-  </form>
-</div>
-
-<!-- Display the user's data after form submission -->
-
-<div class="main-container  d-flex flex-row  p-0 ">
-<div class="tool_container">
-  <div class="profile-detail d-flex flex-column border   p-4 text-center">
-    <img src="/media/{{user.user_profile_image}}" alt="Profile Image" class="m-auto" style="border-radius: 50%;
-    height: 80px;
-    width: 80px;
-    object-fit: cover;
-    background: #857d7d3b;">
-    <h4>{{user.first_name}} {{user.last_name}}</h4>
-    <a href="/dashboard/profile" target="_blank">
-    <button class="rounded bg-white " style="color: green;border: 1px solid green; font-size: 14px;">
-      Update Profile
-    </button>
-    </a>
-    
-  </div>
-  <div class="profile-2 d-flex  border rounded justify-content-between  p-4 text-center">
-    
-      <button class="green_button" id="my-post"  style="background-color: #5c5ce9db ;
-      width: fit-content;">My Posts</button>
-    
-    <a href="{% url 'community_post:add_post' %}" target="_blank" style="width: fit-content;">
-      <button type="button" class="green_button" >
-        Add Post
-      </button>
-    </a>
-  </div>
-</div>
-<div class="container1">
-  {% if posts %}
-  {% for post in posts %}
-  <div class="card mb-3" >
-    <div class="card-body">
-      <!-- Display user profile image -->
-      <!-- <div class="d-flex align-items-center mb-2">
-        <img src="{{ post.user.user_profile_image.url }}" width="40" height="40" alt="Profile Image"
-          style="border-radius: 50%;object-fit: cover;">
-        <div class="ms-2">
-          <h5 class="card-title">{{ post.user.first_name }} {{ post.user.last_name }}</h5>
-          {{ post.updated_at }}
-        </div>
-      </div> -->
-
-      <div class="d-flex justify-content-between mb-2">
-        <div class="d-flex justify-content-between">
-          <img src="{{ post.user.user_profile_image.url }}" class="cmp_img" width="30px" height="30px" alt="image" style="    object-fit: cover;
+{% if users %}
+  {% for user in users %}
+  <div class="add_pad mb-3">
+    <div class="card card_id_contain" onclick="user_profile_page('{{user.id}}')" style="border-radius: 14px;cursor: pointer;">
+      <div class="card-body">
+        <div class="job_cards mb-2 d-flex justify-content-between">
+          <div class="job_cards d-flex ">
+            <img src="/media/{{user.user_profile_image}}" class="cmp_img" width="30px" height="30px" alt="image {{counter}}" style="    object-fit: cover;
     border-radius: 50%;">
-          <div class="d-flex flex-column" style="margin-left: 10px;">
-            <span style="line-height: 14px; font-size: 20px;">{{ post.user.first_name }} {{ post.user.last_name }}</span>
-            <span style="color: gray; font-size: 14px;">{{ post.updated_at }}</span>
+            <div class="d-flex flex-column" style="margin-left: 10px;">
+              <span style="line-height: 14px;
+                    font-size: 20px;">
+                {{user.first_name}} {{user.last_name}}
+              </span>
+              <span style="color: gray;font-size: 14px;">
+                {{user.details.applying_for}}
+              </span>
+            </div>
           </div>
+          <svg class="" xpmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#1F8268">
+            <path
+              d="M8.355 6.316a.985.985 0 0 0 0 1.515l4.714 4.17-4.714 4.17a.985.985 0 0 0 0 1.515c.474.419 1.24.419 1.713 0l5.577-4.933a.985.985 0 0 0 0-1.515l-5.577-4.933c-.461-.408-1.239-.408-1.713.01Z">
+            </path>
+          </svg>
+        </div>
+        <div class="job_cards align-item-center" style="width: fit-content;align-items: center;">
+          <img width="19px" height="auto"
+            src="https://storage.googleapis.com/mumbai_apnatime_prod/jobs_page/Location_icon.webp" alt="">
+          <span style="color: gray;font-size: 16px;margin-left: 5px;">{{user.details.location}}</span>
+        </div>
+        <div class="job_cards align-item-center" style="width: fit-content;align-items: center;">
+          <img width="19px" height="auto"
+            src="/media/logos/college.png" alt="Education">
+          <span style="color: gray;font-size: 16px;margin-left: 5px;">
+            {{user.details.college_name}} |
+                {{user.details.college_start_date|formatted_start_end}} - {{user.details.college_end_date|formatted_start_end}}
+          </span>
+        </div>
+        <div class="job_cards align-item-center" style="width: fit-content;align-items: center;">
+          <img width="19px" height="auto"
+            src="/media/logos/education.png" alt="Education">
+          <span style="color: gray;font-size: 16px;margin-left: 5px;">
+                {% if user.details.student %}
+                    Student | 
+                {% else %}
+                    {{user.details.education_level}} |
+                {% endif %}
+                {% if user.details.diploma_degree %}
+                   {{ user.details.diploma_degree }} in {{user.details.specialization}}
+                {% elif user.details.iti_degree %} 
+                    {{ user.details.iti_degree }} in {{user.details.specialization}}
+                {% elif user.details.graduate_degree %}
+                    {{ user.details.graduate_degree }} in {{user.details.specialization}}
+                {% elif user.details.postgraduate_degree %}
+                    {{ user.details.postgraduate_degree }} in {{user.details.specialization}}
+                {% endif %}
+          </span>
         </div>
       </div>
-
-      <!-- Post content -->
-       <div class="card-text">
-        {{ post.content|safe }}
-       </div>
-      <!-- Like and Comment buttons (if needed) -->
-      <p class="card-link  text-end" data-post-id="{{ post.id }}" onclick="like_toggle(event)">
-        {% if post.id in liked_post_ids %}
-        <i class="fa-solid fa-thumbs-up liked" id="heart_icon"></i> <span class="tlike">{{post.total_likes}}</span>
-        {% else %}
-        <i class="fa-solid fa-thumbs-up not-liked" id="heart_icon"></i> <span class="tlike">{{post.total_likes}}</span>
-        {% endif %}
-      </p>
     </div>
-
   </div>
   {% endfor %}
   {% else %}
@@ -224,33 +190,3 @@
     </div>
   </div>
   {% endif %}
-</div>
-</div>
-
-<div class="modal fade" id="delete_modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Delete Post</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body text-center">
-        Are you sure you want to delete this post?
-      </div>
-      <div class="modal-footer">
-        <button type="button" id="delete" class="btn btn-primary">Delete</button>
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
-</div>
-<a href="#top">
-  <img width="50" height="50" id="Up_Arrow" src="/media/logos/scroll_to_top.png" alt="page-up-button">
-  </a>
-{% endblock content %}
-
-{% block javascripts %}
-{% load static %}
-<script src="{% static 'js/community_post.js' %}"></script>
-<!-- Place the following <script> and <textarea> tags your HTML's <body> -->
-{% endblock javascripts %}
