--- a/hatcher_source/templates/blocks/profile_base.html
+++ b/hatcher_source/templates/blocks/profile_base.html
@@ -15,6 +15,7 @@
     <!-- Bootstrap DatePicker -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/css/bootstrap-datepicker.css" type="text/css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/js/bootstrap-datepicker.js" type="text/javascript"></script>
+    <link href="/media/logos/hatcher_tab.png" rel="icon" type="image/png">
     {% block css %}
         
     {% endblock css %}
