--- a/hatcher_source/templates/credentials/employer_login.html
+++ b/hatcher_source/templates/credentials/employer_login.html
@@ -7,7 +7,7 @@
 <div class="main-container">
   
   <form class="container text-center" method="post" enctype="multipart/form-data"
-  action="{% url 'employer_login' %}" >
+  action="{% url 'employer:employer_login' %}" >
   {% csrf_token %}
 
   <div class="d-flex flex-column align-items-center">
@@ -38,7 +38,7 @@
   <center>
     <button  type="submit" id="submit-btn" class="sub-btn">Login</button>
     <br>
-    <p>New User ? <a href="{% url 'employer_register'%}" class="login">Sign Up</a></p>
+    <p>New User ? <a href="{% url 'employer:employer_register'%}" class="login">Sign Up</a></p>
   </center>
   </form>
 </div>
