--- a/hatcher_source/templates/credentials/landing_page.html
+++ b/hatcher_source/templates/credentials/landing_page.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hatcher - Innovate Your Workflow</title>
     <style>
+        html {
+            scroll-behavior: smooth;
+        }
         * {
             margin: 0;
             padding: 0;
@@ -780,7 +783,7 @@
           <a href="{% url 'login'%}">
             <button id="candidateLogin" class="modal-buttons">Candidate Login</button>
           </a>
-          <a href="{% url 'employer_login'%}">
+          <a href="{% url 'employer:employer_login'%}">
             <button id="employerLogin" class="modal-buttons">Employer Login</button>
           </a>
         </div>
@@ -794,7 +797,7 @@
           <a href="{% url 'register'%}">
             <button id="candidateSignUp" class="modal-buttons">Candidate Sign Up</button>
           </a>
-          <a href="{% url 'employer_register'%}">
+          <a href="{% url 'employer:employer_register'%}">
             <button id="employerSignUp" class="modal-buttons">Employer Sign Up</button>
           </a>
         </div>
