--- a/hatcher_source/templates/dashboard/job_detail.html
+++ b/hatcher_source/templates/dashboard/job_detail.html
@@ -5,29 +5,43 @@
 <link rel="stylesheet" href="{% static 'css/job_detail.css' %}">
 {% endblock css %}
 {% block content %}
-
-<div class="container border search_div d-flex justify-content-center" id="search-div">
-  <form action="{% url 'dashboard:job_search' %}" method="get" class="d-flex flex-row " style="width: 90%;">
+<div class=" mb-3 d-flex align-items-center " style="height: 90px;" id="search-div">
+  <form action="{% url 'dashboard:job_search' %}" id="form" method="get" class="d-flex flex-row " style="margin:auto; width: 70%;gap: 10px;">
     {{ csrftoken }}
-    <select class="form-select" aria-label="Default select example" name="job_type" id="job_type_select" required>
-      <option value="Internship" selected>Internship</option>
-      <option value="Full Time">Full Time</option>
-      <option value="Part Time">Part Time</option>
-      <option value="Hourly">Hourly</option>
-      <option value="Hourly">Freelance</option>
-    </select>
-    <img width="24" height="24" src="https://img.icons8.com/material-rounded/24/vertical-line.png" alt="vertical-line"
-      class="align-self-center" />
-    <input type="text" placeholder="Enter KeyWord [company/position]" name="keyword" class="form-control" required />
-    <img width="24" height="24" src="https://img.icons8.com/material-rounded/24/vertical-line.png" alt="vertical-line"
-      class="align-self-center" />
-    <input class="form-control " type="text" placeholder="Location [City|Remote]" name="location" required />
-    <img width="24" height="24" src="https://img.icons8.com/material-rounded/24/vertical-line.png" alt="vertical-line"
-      class="align-self-center" />
-    <button type="submit" class="btn btn-primary">Search</button>
+    <input type="text" placeholder="Enter KeyWord [company/position]" name="keyword" class="form-control" value="{{ search_query.keyword|default:'' }}"  />
+    <input 
+    class="form-control" 
+    type="text" 
+    placeholder="Location [City]" 
+    name="location" 
+    id="city_input" 
+    value="{{ search_query.location|default:'' }}" 
+    autocomplete="off" 
+    
+/>
+<div id="city_suggestions" class="autocomplete-items "></div>
+
+    <button type="submit" class="btn btn-success" style="
+    width: 44%;
+">Search Job</button>
   </form>
 </div>
-{{job.}}
+<div class="apply_job_div visually-hidden  d-flex justify-content-evenly align-items-center">
+  <div class="d-flex justify-content-between" style="gap: 11px;">
+    <img src="/media/{{job.company__image}}" alt="company__image" width="40px" height="40px" class="cmp_img">
+  <div class="company_element d-flex flex-column">
+    <h5 style="margin: 0;">{{job.title}}</h5>
+    <p class="description">{{job.company__name}}</p>
+  </div>
+</div>
+  <div>
+    {% if apply_job %}
+    <button class="apply_button btn btn-dark" disabled="true">Applied</button>
+    {% else %}
+    <button class="apply_button btn btn-dark"  onclick="apply_job('{{job.id}}',this)">Apply now</button>
+    {% endif %}
+  </div>
+</div>
 <div class="main-container ">
   <div class="container-1">
     <div class="add_pad" style="margin-bottom: 16px;">
@@ -35,7 +49,7 @@
         <div class="card-body">
           <div class="job_cards mb-2 d-flex justify-content-between">
             <div class="job_cards d-flex">
-              <img src="/media/company_images/hatcher_tab.png" class="cmp_img" width="50px" height="50px" alt="image 127">
+              <img src="/media/{{job.company__image}}" class="cmp_img" width="50px" height="50px" alt="image 127">
               <div class="d-flex flex-column" style="margin-left: 10px;">
                 <span style="
                     line-height: 27px;
@@ -48,6 +62,13 @@
                 </span>
               </div>
             </div>
+            <div >
+              {% if apply_job %}
+              <button class="apply_button btn btn-dark" disabled="true">Applied</button>
+              {% else %}
+              <button class="apply_button btn btn-dark"  onclick="apply_job('{{job.id}}',this)">Apply now</button>
+              {% endif %}
+            </div>
           </div>
           <div class="d-flex justify-content-between">
             <div class="job_cards align-item-center" style="width: fit-content;align-items: center;">
@@ -58,9 +79,15 @@
             <div class="job_cards align-item-center" style="width: fit-content;align-items: center;">
               <img width="19px" height="auto"
                 src="https://storage.googleapis.com/mumbai_apnatime_prod/jobs_page/Salary_icon.webp" alt="">
-              <span style="color: gray;font-size: 16px;margin-left: 5px;"><img src="/media/logos/rupee.png" alt=""
+              {% if job.salary_minimum %}
+              <span style="color: gray;font-size: 16px;margin-left: 5px;">
+                <img src="/media/logos/rupee.png" alt=""
                   width="15">{{job.salary_minimum}}-<img src="/media/logos/rupee.png" alt=""
-                  width="15">{{job.salary_maximum}} monthly</span>
+                  width="15">{{job.salary_maximum}} monthly
+              </span>
+              {% else %}
+              <span style="color: gray;font-size: 16px;margin-left: 5px;">Not Disclosed</span>
+              {% endif %}
             </div>
           </div>
           <div class="d-flex " style="margin-top: 10px;">
@@ -88,12 +115,13 @@
         </div>
       </div>
     </div>
-    <div class="detail-description ">
+    <div class="detail-description mb-3 ">
       <h5>Job Description</h5>
       <br>
       {{ job.description|safe }}
     </div>
   </div>
+  
   <div class="container-2">
     <img src="https://cdn.apna.co/cloudinary/employer-dashboard-images/Logged%20in.png" width="335" alt="" class="">
   </div>
@@ -102,8 +130,10 @@
 
 
 
+
 {% endblock content %}
 {% block javascripts %}
 {% load static %}
 <script src="{% static 'js/candidate_dashboard/job_detail.js'%}"></script>
+
 {% endblock javascripts %}
